Altered navigation bar and removed typeweriter effect Cirrent Version Issue: Navigation bar is truncated

--- a/style.css
+++ b/style.css
@@ -23,27 +23,23 @@ overflow: scroll;
 padding-left: 0%;
 padding-right: 0%;
 position: fixed;
-height: 70px;
 }
   
   .menu {
-    width: 400px;
-    float:right;
-    height:70px;
+    width: 50%;
+height: 15%;
   }
   
   ul {
-    float:right;
     display:flex;
-    justify-content:center;
-    align-items:center;
+    justify-content:flex-end;
+    align-items:right;
   
   }
   
   ul li {
     list-style: none;
-    margin-right: 15%;
-    margin-top: 27px;
+    margin-right: 10%;
     font-size:14px;
   
   }
@@ -58,46 +54,6 @@ height: 70px;
   
   }
   
-  
-  .typewriter h1 {
-    color: #FFFFFF;
-    font-family: monospace;
-    font-size:40px;
-    font-weight: 300;
-    font-family: 'Lato', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    letter-spacing: .2em;
-    overflow: hidden; 
-    border-right: .15em solid #9BA9FF  ; 
-    white-space: normal;
-    margin: 0 auto; 
-    animation: 
-      typing 1.2s steps(40, end),
-      blink-caret .5s step-end infinite;
-  }
-  
-  .typewriter {
-    position: absolute;
-    left: 55%;
-    top: calc(75%);
-    transform: translate(-50%, -50%);
-    z-index: 1;
-  }
-  
-  /* The typing effect */
-  @keyframes typing {
-    from { width: 0 }
-    to { width: 100% }
-  }
-  
-  /* The typewriter cursor effect */
-  @keyframes blink-caret {
-    from, to { border-color: transparent }
-    50% { border-color: #9BA9FF   }
-  }
-  
-  
-    
   
   @import url(https://fonts.googleapis.com/css?family=Ubuntu:700);
   html, body {
